--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "firebase": "^12.0.0",
+    "framer-motion": "^12.23.12",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
@@ -53,6 +54,7 @@
     "react-dom": "^19",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
